--- a/README.html
+++ b/README.html
@@ -34,6 +34,7 @@
 <ul>
 <li>Invoicing</li>
 <li>Multi-users</li>
+<li>Multi-currency</li>
 <li>Login/Pass</li>
 </ul>
 
@@ -53,7 +54,7 @@ Configure default hourly rate, timezone and base-path here: guts/config.php</p>
 
 <h2 id="usage:">Usage:</h2>
 
-<p>Once installed just open &#8216;http://localhost/tallyho&#8217; up in your web browser. Upon initiation it will create one task which you can edit/duplicate/delete.</p>
+<p>Once installed just open &#8216;http://localhost/tallyho&#8217; up in your web browser. Upon initiation it will create some demo tasks which you can edit/duplicate/delete.</p>
 
 <p>TallyHo uses flat-files (.txt/.yaml) instead of a database.</p>
 
