--- a/README.html
+++ b/README.html
@@ -41,8 +41,8 @@
 <p>Features I&#8217;d like to add at some point;</p>
 
 <ul>
-<li>Adding of one-off expenses (e.g. printing costs, client&#8217;s domain name)</li>
-<li>Filtering by date range.</li>
+<li>Adding of reimbursable expenses (e.g. printing costs, client&#8217;s domain name, &#8216;research&#8217; trip to Bali)</li>
+<li>Filtering by date range</li>
 <li>Basic Reports/Charts (Historical and Projection)</li>
 <li>Basic exporting</li>
 </ul>
@@ -80,7 +80,15 @@ Configure default hourly rate, timezone and base-path here: guts/config.php</p>
 
 <p>The heirarchy is Project&gt;Client&gt;Default</p>
 
-<p>Note: TallyHo is still very basic and the code is not very robust or elegant. Help out! :)</p>
+<h2 id="thebackstory:">The Backstory:</h2>
+
+<p>Over the course of my 17 years as a freelance designer/developer I&#8217;ve tried out a decent number of time-trackers, from native apps, browser-based and even just using MacOS' Notes app. For the last year I have been using Kimai and have for the most part been pretty happy with it. Trouble is, it occupies over 2.5GB of my server space, and with over 21,000 files it&#8217;s no surprise that it&#8217;s quite slooooow and easy to break &#8230;</p>
+
+<p>&#8230; so I created TallyHo, with a &#8216;simple by design&#8217; philosophy.</p>
+
+<h2 id="disclaimer:">Disclaimer:</h2>
+
+<p>TallyHo is not very robust or elegant (yay procedural hacking!). Give it time, and please feel free to contribute!</p>
 
 </body>
 </html>
