Rewrote lots of the JS, including dropdown code

--- a/README.html
+++ b/README.html
@@ -20,13 +20,29 @@
 
 <ul>
 <li>Flat file (text/Yaml) ‘database’.</li>
-<li>Quick add (pre-fills previous client/project)</li>
+<li>Add a New task</li>
 <li>Edit tasks</li>
 <li>Duplicate / Restart tasks</li>
 <li>Filter by Client and/or Project</li>
+<li>Delete tasks</li>
 <li>Select rows/days and calculate total costs</li>
 <li>Different hourly rates; Default Rate / Client Rate / Project Rate</li>
 <li>Visual cue showing time spent on each task (blue = meh / red = good effort)</li>
+<li>Selecting multiple rows gives a tally of Rows / Hours / Cost</li>
+</ul>
+
+<p>Partially Implemented</p>
+
+<ul>
+<li>Reimbursable expenses (e.g. printing costs, client&#8217;s domain name, &#8216;research&#8217; trip to Bali)</li>
+</ul>
+
+<p>Features I&#8217;d like to add at some point;</p>
+
+<ul>
+<li>Filtering by date range</li>
+<li>Basic Reports/Charts (Historical and Projection)</li>
+<li>Basic exporting</li>
 </ul>
 
 <p>TallyHo is simple by design and I have no intention of adding the following;</p>
@@ -36,15 +52,6 @@
 <li>Multi-users</li>
 <li>Multi-currency</li>
 <li>Login/Pass</li>
-</ul>
-
-<p>Features I&#8217;d like to add at some point;</p>
-
-<ul>
-<li>Adding of reimbursable expenses (e.g. printing costs, client&#8217;s domain name, &#8216;research&#8217; trip to Bali)</li>
-<li>Filtering by date range</li>
-<li>Basic Reports/Charts (Historical and Projection)</li>
-<li>Basic exporting</li>
 </ul>
 
 <h2 id="installation:">Installation:</h2>
@@ -88,7 +95,7 @@ Configure default hourly rate, timezone and base-path here: guts/config.php</p>
 
 <h2 id="disclaimer:">Disclaimer:</h2>
 
-<p>TallyHo is not very robust or elegant (yay procedural hacking!). Give it time, and please feel free to contribute!</p>
+<p>TallyHo&#8217;s code is not particularly elegant yet (yay procedural hacking!), yet. Please feel free to contribute!</p>
 
 </body>
 </html>
